[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wallman"
version = "1.3.0b1"
authors = [
    {name = "Emma Nora Theuer", email = "wallman@entheuer.de"},
]
description = "A simple program to set dynamic wallpapers on standalone X11 Windows Managers and Wayland compositors"
readme = "README"
requires-python = ">=3.11"
keywords = ["Desktop", "Wallpapers"]
license = {text = "MIT"}
classifiers = [
    "Programming language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
dependencies = [
    "APScheduler",
    'importlib-metadata; python_version<"3.10"',
]

[project.urls]
Homepage = "https://git.entheuer.de/emma/Wallman"
Issues = "https://git.entheuer.de/emma/Wallman/issues"
